Fix bug in reports that date column is shown too small
The use of indentation caused this problem when using
QTextBrowser.

CCBUG:507843
(cherry picked from commit c5235c4537dd6107cdda220ac6a94e92db7b61b3)

--- a/kmymoney/html/kmymoney.css
+++ b/kmymoney/html/kmymoney.css
@@ -169,12 +169,10 @@
 
     table.report td.left1 {
         text-align: left;
-        text-indent: 16px;
     }
 
     table.report td.left2 {
         text-align: left;
-        text-indent: 32px;
     }
 
     table.report tr#subtotal td { /*line separating row groups*/
@@ -341,7 +339,6 @@
 
     table.report td { /*styles table cells- but not background color*/
         text-align: right;
-
     }
 
     table.report td.left { /*far left column*/
@@ -354,12 +351,10 @@
 
     table.report td.left1 { /*does not appear to be in use*/
         text-align: left;
-        text-indent: 16px;
     }
 
     table.report td.left2 { /*does not appear to be in use*/
         text-align: left;
-        text-indent: 32px;
     }
 
     table.report tr#subtotal td { /*line separating row groups*/
